@@ -1,6 +1,6 @@
-3.11.1+rc0
+3.11.1+rc1
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
 
-# $Id: VERSION,v 1.26.2.13 2009/05/19 14:46:13 doligez Exp $
+# $Id: VERSION,v 1.26.2.17 2009/06/02 21:41:53 doligez Exp $
