@@ -1,5 +1,7 @@
 let bindir = ref Ocamlbuild_Myocamlbuild_config.bindir;;
 let libdir = ref begin
-  try Filename.concat (Sys.getenv "OCAMLLIB") "ocamlbuild"
-  with Not_found -> Ocamlbuild_Myocamlbuild_config.libdir
+  Filename.concat
+    (try Sys.getenv "OCAMLLIB"
+     with Not_found -> Ocamlbuild_Myocamlbuild_config.libdir)
+    "ocamlbuild"
 end;;
